--- a/static-sorting-visualisation.cabal
+++ b/static-sorting-visualisation.cabal
@@ -35,6 +35,7 @@ executable static-sorting-visualisation-exe
                      , containers >= 0.5
                      , random >= 1
                      , static-sorting-visualisation
+                     , shake >= 0.15.10
   default-language:    Haskell2010
 
 test-suite static-sorting-visualisation-test
