--- a/static-sorting-visualisation.cabal
+++ b/static-sorting-visualisation.cabal
@@ -33,9 +33,12 @@ executable static-sorting-visualisation-exe
                      , mtl >= 0.1
                      , JuicyPixels >= 3.2
                      , containers >= 0.5
+                     , extra >= 1.4.10
                      , random >= 1
                      , static-sorting-visualisation
+                     , hashable >= 1.2.4.0
                      , shake >= 0.15.10
+                     , random-shuffle >= 0.0.4
   default-language:    Haskell2010
 
 test-suite static-sorting-visualisation-test
